# SCAN

./: .gitignore  README.md  partition.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
freeRTOS-control-graphs/: control-graph-2.py  control-graph-claude.py  control-graph.py
server_certs/: README.md  github_cert.pem  hivemq_cert.pem
src/app/NDEF/: CMakeLists.txt  ntag_reader.c  ntag_reader.h  pn532.c  pn532.h
src/app/NDEF/mifare-old/: card_reader.c  mifare_classic.h  ndef_message.h  ndef_record.h
src/app/admin_mode/: CMakeLists.txt  admin_mode.c  admin_mode.h
src/app/buzzer/: buzzer.c  status_buzzer.c
src/app/buzzer/include/: buzzer.h  status_buzzer.h
src/app/database/: CMakeLists.txt  firebase_http_client.c  firebase_utils.c  firebase_utils.h  kiosk_firebase.c
src/app/database/include/: firebase_utils.h
src/app/device_drivers/bq25798/: bq25798.c
src/app/device_drivers/bq25798/include/: bq25798.h
src/app/device_drivers/cypd3177/: CMakeLists.txt  cypd3177_i2c.c  cypd3177_intr.c
src/app/device_drivers/cypd3177/include/: cypd3177.h  cypd3177_i2c.h  i2c.h
src/app/device_drivers/keypad/: keypad.c
src/app/device_drivers/keypad/include/: keypad.h
src/app/device_drivers/keypad_driver/: keypad.c
src/app/device_drivers/pcf8574n/: pcf8574n_i2c.c
src/app/display/: CMakeLists.txt  README_UI_INTEGRATION.md  admin_display_frames.c  admin_display_frames.h  admin_frames.c  admin_frames.h  display_config.c  display_config.h  display_frames.c  display_frames.h  display_utils.c  lvgl_demo_ui.h  ui_assets.h  ui_design_plan.md  ui_screens.c  ui_screens.h  ui_styles.c  ui_styles.h  ui_symbols.h
src/app/display/include/: display_config.h  display_utils.h  ui_screens.h
src/app/i2c/: CMakeLists.txt  i2c_config.c
src/app/i2c/include/: i2c_config.h
src/app/keypad_driver/: CMakeLists.txt  keypad_driver.c  keypad_driver.h
src/app/keypad_driver/include/: keypad_driver.h
src/app/kiosk_tasks/: CMakeLists.txt  admin_tasks.c  admin_tasks.h  kiosk_tasks.c  kiosk_tasks.h
src/app/main/: CMakeLists.txt  admin_mode.c  global.c  kiosk_tasks.c  kiosk_tasks.h  main.c  main.h  main_utils.c
src/app/main/include/: admin_mode.h  global.h  main.h  main_utils.h  state_enum.h
src/app/misc/: CMakeLists.txt  buzzer.c  buzzer.h  pir.h  pir_sensor.c  status_leds.c
src/app/misc/include/: pir_sensor.h  status_leds.h
src/app/mqtt/: CMakeLists.txt  mqtt.c
src/app/mqtt/include/: mqtt.h
src/app/mqtt_client/: CMakeLists.txt  mqtt.c
src/app/mqtt_client/include/: mqtt.h
src/app/ota_update/: CMakeLists.txt  ota.c  ota.h
src/app/pn532/: pn532.h
src/app/power_mgmt/: CMakeLists.txt  power_mgmt.c
src/app/power_mgmt/include/: power_mgmt.h
src/app/wifi/: CMakeLists.txt  wifi_init.c  wifi_init.h
src/app/wifi/include/: wifi_init.h
